<resources>
    <string name="app_name">Money Manager</string>
    <string name="text_save_transaction">Save Transaction</string>
    <string name="text_ui_mode">UI Mode</string>
    <string name="text_total_income">Total Income</string>
    <string name="text_total_expense">Total Expense</string>
    <string name="text_total_balance">Total Balance</string>
    <string name="text_recent_transactions">Recent Transactions</string>
    <string name="text_view_all">View all</string>
    <string name="text_expense_when">When</string>
    <string name="text_expense_amount">Amount</string>
    <string name="text_expense_transaction_type">Transaction type</string>
    <string name="text_expense_tag">Tag</string>
    <string name="text_expense_note">Note</string>
    <string name="text_expense_add_transaction">Save Transaction</string>
    <string name="text_expense_rupees">₹</string>
    <string name="success_expense_saved">Transaction saved successfully</string>
    <string name="success_transaction_delete">Transaction deleted successfully!</string>
    <string name="text_title">Title</string>
    <string name="text_about">About</string>
    <string name="text_filter">Filter</string>
    <string name="text_edit">Edit</string>
    <string name="text_createdAt">Created At</string>

    <!--  Share -->
    <string name="success_transaction_export">Transaction exported successfully!</string>
    <string name="failed_transaction_export">Transaction exported failed ☹️</string>
    <string name="text_error">Transaction exported failed ☹️</string>
    <string name="support_pending">Support for export on Android10+ is still in progress, kindly be patient and thanks for support!</string>
    <string name="text_open">Open</string>

    <!--  About -->
    <string name="text_about_license_title"><![CDATA[Attributions & License]]></string>
    <string name="text_about_license">Licensed Under Apache 2.0 License</string>
    <string name="text_about_visit_title">Visit us at</string>
    <string name="text_about_visit_url"><u>https://github.com/ArunSivanandan/Money-Manager</u></string>
    <string name="text_app_version">v%s (%d)</string>
    <string name="text_share_as_text">Share as Text</string>
    <string name="text_share_as_image">Share as Image</string>
    <string name="text_delete">Delete</string>
    <string name="text_share">Share</string>
    <string name="iv_github_icon">clickable rounded github icon</string>
    <string name="txt_github">Github</string>

    <!-- share transaction -->
    <string name="share_message">\%s \nAmount: %s, \nTransaction-Type: %s, \nTag: %s, \nDate: %s, \nNote: %s, \nCreatedAt: %s \n\nVisit: https://github.com/ArunSivanandan/Money-Manager</string>
    <string name="text_transaction_empty_title">No Transaction Yet!</string>
    <string name="text_transaction_empty_desc">After your first transaction you will be able to view it here</string>
    <string name="text_export_csv">Export to CSV</string>
    <string name="text_add_transaction">Add Transaction</string>
    <string name="text_undo">Undo</string>
    <string name="text_error_occurred">Error occurred!</string>

    // Filter feature
    <string name="text_filter_by">Filter by </string>
    <string name="text_overall">Overall</string>
    <string name="text_income">Income</string>
    <string name="text_expenses">Expenses</string>

    // Lock Screen
    <string name="lock_note">For security reasons please create a lock password</string>
    <string name="lock_note_existing">For security reasons, please enter your lock password</string>
    <string name="lock_create_new_pwd">Enter new password</string>
    <string name="lock_confirm_new_pwd">Confirm new password</string>
    <string name="lock_existing_user_pwd">Enter your password</string>

    <string name="lock_pwd_empty">Password field should not be empty!</string>

    <string name="lock_error_desc">Incorrect password! Please try again.</string>
    <string name="lock_confirm_btn">Confirm</string>
    <string name="lock_content_desc">Lock icon displayed for entering password.</string>
</resources>
